--- a/Source/ForInterviewWork/web/Views/Shared/_Layout.cshtml
+++ b/Source/ForInterviewWork/web/Views/Shared/_Layout.cshtml
@@ -21,8 +21,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>*@
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">員工管理</a>
                         </li>
                     </ul>
                 </div>
