增加部門管理空殼; service layer & data access layer 抽出共用父類別;

--- a/Source/ForInterviewWork/web/Views/Shared/_Layout.cshtml
+++ b/Source/ForInterviewWork/web/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">員工管理</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Department" asp-action="Index">部門管理</a>
+                        </li>
                     </ul>
                 </div>
             </div>
