部門管理-取得管理用資料清單; UI 套用設計; 各按鈕待實作; 加入 font-awesome;

--- a/Source/ForInterviewWork/web/Views/Employee/Index.cshtml
+++ b/Source/ForInterviewWork/web/Views/Employee/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "員工管理";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>員工管理</h1>
+<h1>@ViewData["Title"]</h1>
 
