--- a/Source/ForInterviewWork/web/Views/Department/Index.cshtml
+++ b/Source/ForInterviewWork/web/Views/Department/Index.cshtml
@@ -1,8 +1,68 @@
-﻿
+﻿@model IEnumerable<Common.Data.Domain.Models.DepartmentForManage>
+
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "部門管理";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>部門管理</h1>
-
+<h1>@ViewData["Title"]</h1>
+<a title="新增資料" class="btn btn-primary" href="#"><i class="fa fa-plus"></i> 新增</a>
+<hr />
+<div class="card bg-light">
+    <div class="card-body p-1">
+        <div class="form-group form-row">
+            <label class="col-md-2 col-form-label text-md-right">關鍵字</label>
+            <div class="col-md-4">
+                <input type="text" class="form-control" maxlength="50" />
+            </div>
+        </div>
+        <div class="form-group form-row">
+            <div class="col-md-2"></div>
+            <div class="col-md-10">
+                <a title="查詢" class="btn btn-secondary" href="#"><i class="fa fa-search"></i> 查詢</a>
+                <a title="清除條件" class="btn btn-link btn-sm" href="#">清除條件</a>
+            </div>
+        </div>
+    </div>
+</div>
+<table class="table table-responsive-md table-bordered table-sm table-striped table-hover">
+    <thead>
+        <tr>
+            <th style="width:3%">&nbsp;</th>
+            <th title="部門名稱">部門名稱</th>
+            <th title="排序編號" style="width:9%">排序編號</th>
+            <th title="帳號總數" style="width:9%">帳號總數</th>
+            <th title="管理功能" style="width:26%">管理功能</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @item.RowNum
+                </td>
+                <td>
+                    @item.DeptName
+                </td>
+                <td>
+                    @item.SortNo
+                </td>
+                <td>
+                    @item.EmpTotal
+                </td>
+                <td>
+                    <a title="修改" class="btn btn-sm btn-success" href="#">
+                        <i class="fa fa-pencil-square-o"></i> 修改
+                    </a>
+                    <a title="刪除" class="btn btn-sm btn-danger" href="#">
+                        <i class="fa fa-trash-o"></i> 刪除
+                    </a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+<div class="text-center">
+    共 @ViewData["RowCount"] 筆
+</div>
