--- a/Source/ForInterviewWork/web/Views/Shared/_Layout.cshtml
+++ b/Source/ForInterviewWork/web/Views/Shared/_Layout.cshtml
@@ -23,8 +23,8 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         @*<li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>*@
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            </li>*@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">員工管理</a>
                         </li>
@@ -38,6 +38,12 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            <div id="primaryAlert" class="alert alert-danger" style="display:none;" role="alert">
+                <span id="primaryAlertText">...</span>
+                <button type="button" class="close" aria-label="Close" onclick="HideElement('primaryAlert');">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
             @RenderBody()
         </main>
     </div>
@@ -47,6 +53,27 @@
             &copy; 2021 - web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+    <!-- Modal -->
+    <div class="modal fade" id="primaryDialog" tabindex="-1" role="dialog" aria-labelledby="primaryDialogTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="primaryDialogTitle">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" id="primaryDialogBody">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">取 消</button>
+                    <button type="button" class="btn btn-primary" id="btnConfirmPrimary">確 定</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
