部門管理: 新增部門;

--- a/Source/ForInterviewWork/web/Views/Department/Index.cshtml
+++ b/Source/ForInterviewWork/web/Views/Department/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h1>@ViewData["Title"]</h1>
-<a title="新增資料" class="btn btn-primary" href="#"><i class="fa fa-plus"></i> 新增</a>
+<a title="新增資料" class="btn btn-primary" asp-action="Create"><i class="fa fa-plus"></i> 新增</a>
 <hr />
 <div class="card bg-light">
     <div class="card-body p-1">
