--- a/Source/ForInterviewWork/web/Views/Shared/_Layout.cshtml
+++ b/Source/ForInterviewWork/web/Views/Shared/_Layout.cshtml
@@ -25,12 +25,15 @@
                         @*<li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                             </li>*@
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">員工管理</a>
-                        </li>
+                        </li>*@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Department" asp-action="Index">部門管理</a>
                         </li>
+                        @*<li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="EmployeeRole" asp-action="Index">員工身分管理</a>
+                        </li>*@
                     </ul>
                 </div>
             </div>
